<resources>
    <string name="app_name">TourDePlace</string>
    <!-- Overflow Menu String -->
    <string name="action_settings">Settings</string>
    <string name="action_search_business_title">Search specific business</string>
    <string name="action_search_any_title">Search anything around</string>

    <string name="action_feedback">Feedback</string>


    <!-- Popup  Menu String Search Frag-->
    <string name="add_to_favorites">Save in Favorites</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="popup_share">Share Place</string>

    <!-- Tab Strings -->
    <string name="tab_search">Search results</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_map">Map View</string>

    <!-- Snackbar strings -->
    <string name="snackbar_message_no_location_permissions">No location permission granted</string>
    <string name="snackbar_message_location_permissions_needed">Location access is required to show places nearby</string>
    <string name="snackbar_action_ok">OK</string>
    <string name="snackbar_message_power_connected">Power is connected</string>
    <string name="snackbar_message_power_disconnected">Power is disconnected</string>
    <string name="snackbar_message_custom_intent_extra_text" translatable="false">SNACKBAR_MESSAGE</string>
    <string name="snackbar_message_added_to_favorites">Location added to favorites</string>
    <string name="snackbar_message_removed_from_favorites">Location removed from favorites</string>



    <!-- Map strings -->
    <string name="marker_current_location">Current Location</string>

    <!-- Settings strings -->
    <string name="settings_category_search_settings_title">Search Settings</string>
    <string name="settings_category_search_settings_summary">Change your search parameters</string>

    <string name="settings_distance_units_key" translatable="false">DISTANCE_UNITS</string>
    <string name="settings_distance_units_title">Display distance in</string>
    <string name="unit_system_km_value">KM</string>
    <string name="unit_system_mi_value">Miles</string>
    <string name="unit_system_km" translatable="false">KM</string>
    <string name="unit_system_mi" translatable="false">MI</string>

    <string-array name="distance_units_entries">
        <item>@string/unit_system_km_value</item>
        <item>@string/unit_system_mi_value</item>
    </string-array>
    <string-array name="distance_units_values">
        <item>@string/unit_system_km</item>
        <item>@string/unit_system_mi</item>
    </string-array>

    <string name="settings_searchRadius_key" translatable="false">SEARCH_RADIUS</string>
    <string name="settings_searchRadius_title">Search Radius</string>
    <string name="settings_searchRadius_summary">Radius distance in KM</string>

    <string name="settings_searchRadius_km_value_500">500 Meter</string>
    <string name="settings_searchRadius_km_value_1000">1 Kilometer</string>
    <string name="settings_searchRadius_km_value_1500">1.5 Kilometer</string>
    <string name="settings_searchRadius_km_value_2000">2 Kilometer</string>
    <string name="settings_searchRadius_km_value_5000">5 Kilometer</string>
    <string name="settings_searchRadius_km_value_10000">10 Kilometer</string>

    <string name="settings_searchRadius_value_500" translatable="false">0.5</string>
    <string name="settings_searchRadius_value_1000" translatable="false">1</string>
    <string name="settings_searchRadius_value_1500" translatable="false">1.5</string>
    <string name="settings_searchRadius_value_2000" translatable="false">2</string>
    <string name="settings_searchRadius_value_5000" translatable="false">5</string>
    <string name="settings_searchRadius_value_10000" translatable="false">10</string>


    <array name="settings_searchRadius_km_entries">
        <item>@string/settings_searchRadius_km_value_500</item>
        <item>@string/settings_searchRadius_km_value_1000</item>
        <item>@string/settings_searchRadius_km_value_1500</item>
        <item>@string/settings_searchRadius_km_value_2000</item>
        <item>@string/settings_searchRadius_km_value_5000</item>
        <item>@string/settings_searchRadius_km_value_10000</item>
    </array>

    <array name="settings_searchRadius_values">
        <item>@string/settings_searchRadius_value_500</item>
        <item>@string/settings_searchRadius_value_1000</item>
        <item>@string/settings_searchRadius_value_1500</item>
        <item>@string/settings_searchRadius_value_2000</item>
        <item>@string/settings_searchRadius_value_5000</item>
        <item>@string/settings_searchRadius_value_10000</item>
    </array>

    <string name="settings_searchRadius_mi_value_500">0.5 mile</string>
    <string name="settings_searchRadius_mi_value_1000">1 mile</string>
    <string name="settings_searchRadius_mi_value_1500">1.5 mile</string>
    <string name="settings_searchRadius_mi_value_2000">2 mile</string>
    <string name="settings_searchRadius_mi_value_5000">5 mile</string>
    <string name="settings_searchRadius_mi_value_10000">10 mile</string>
    <array name="settings_searchRadius_mi_entries">
        <item>@string/settings_searchRadius_mi_value_500</item>
        <item>@string/settings_searchRadius_mi_value_1000</item>
        <item>@string/settings_searchRadius_mi_value_1500</item>
        <item>@string/settings_searchRadius_mi_value_2000</item>
        <item>@string/settings_searchRadius_mi_value_5000</item>
        <item>@string/settings_searchRadius_mi_value_10000</item>
    </array>
    <string name="settings_screen_developer_settings">Developer Settings</string>
    <string name="settings_search_engine_title">Search engine</string>
    <string name="settings_key_search_engine" translatable="false">SEARCH_ENGINE</string>
    <string name="settings_key_search_engine_summary">Selected Engine:</string>
    <string name="search_engine_google" translatable="false">Google</string>
    <string name="search_engine_factual" translatable="false">Factual</string>
    <string-array name="search_engine_entries">
        <item>@string/search_engine_google</item>
        <item>@string/search_engine_factual</item>
    </string-array>
    <string name="search_engine_google_value" translatable="false">GOOG</string>
    <string name="search_engine_factual_value" translatable="false">FACT</string>
    <string-array name="search_engine_values">
        <item>@string/search_engine_google_value</item>
        <item>@string/search_engine_factual_value</item>
    </string-array>

    <string name="settings_last_location_latitude" translatable="false">KEY_LAT</string>
    <string name="settings_last_location_longitude" translatable="false">KEY_LNG</string>

    <string-array name="settings_last_location_entries">
        <item>@string/settings_last_location_latitude</item>
        <item>@string/settings_last_location_longitude</item>
    </string-array>


    <!-- Search ActionProvider strings -->
    <string name="search_hint">Starbucks/Restaurant/Gym</string>

    <!-- Share ActionProvider strings -->
    <string name="action_share_title">Share Place(s)</string>

    <!-- AlertDialog string -->
    <string name="alert_dialog_title">Enable Location</string>
    <string name="alert_dialog_text">Your Locations Settings is set to OFF.\nPlease Enable Location to use this app</string>
    <string name="alert_dialog_positive">Location Settings</string>
    <string name="alert_dialog_negative">Cancel</string>

    <!-- Search Service -->
    <string name="search_service_intent_query_extra" translatable="false">KEYWORD</string>
    <string name="search_service_custom_intent_action" translatable="false">com.example.uaharoni.tourdeplace.SEARCH_SERVICE_BROADCAST</string>
    <string name="search_service_custom_intent_status" translatable="false">SEARCH_SERVICE_STATUS</string>
    <string name="search_service_status_RUNNING" translatable="false">0</string>
    <string name="search_service_status_FINISHED" translatable="false">1</string>
    <string name="search_service_status_ERROR" translatable="false">2</string>
    <string name="search_service_status_RUNNING_text">Search is running. Please wait.</string>
    <string name="search_service_status_FINISHED_text">Search finished!</string>
    <string name="search_service_status_ERROR_text">Search got errors and stopped. Please try again..</string>
    <string name="search_service_status_UNKNOWN_text">Got unknown error. Please try again.</string>

    <string name="search_service_intent_location_extra" translatable="false">LOC_ARR</string>
    <string name="search_service_intent_location_name_extra" translatable="false">LOC_NAME</string>
    <string name="search_service_intent_search_radius_m_extra" translatable="false">SERCH_RADIUS_M</string>


    <string name="search_service_location_name">You are here</string>


    <!-- PowerReceiver -->
    <string name="power_receiver_custom_intent_action" translatable="false">com.example.uaharoni.tourdeplace.SNACKBAR</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
